// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectIUCNForm changes fields on the IUCN menu items as expected 1`] = `
<DocumentFragment>
  <form>
    <div
      class="MuiBox-root MuiBox-root-23"
    >
      <div
        class="MuiBox-root MuiBox-root-25"
        data-testid="iucn-classification-grid"
      >
        <div
          class="MuiBox-root MuiBox-root-26 makeStyles-iucnInputContainer-21"
        >
          <div
            class="MuiBox-root MuiBox-root-27 makeStyles-iucnInput-22"
          >
            <div
              class="MuiFormControl-root MuiFormControl-fullWidth"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
                data-shrink="true"
                id="classification"
              >
                Classification
              </label>
              <div
                class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
              >
                <div
                  aria-haspopup="listbox"
                  aria-label="Classification"
                  aria-labelledby="classification classificationDetails.[0].classification"
                  class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                  id="classificationDetails.[0].classification"
                  role="button"
                  tabindex="0"
                >
                  Class 1
                </div>
                <input
                  aria-hidden="true"
                  class="MuiSelect-nativeInput"
                  name="classificationDetails.[0].classification"
                  tabindex="-1"
                  value="1"
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
                <fieldset
                  aria-hidden="true"
                  class="PrivateNotchedOutline-root-28 MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    class="PrivateNotchedOutline-legendLabelled-30 PrivateNotchedOutline-legendNotched-31"
                  >
                    <span>
                      Classification
                    </span>
                  </legend>
                </fieldset>
              </div>
              <p
                class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled"
              />
            </div>
          </div>
          <div
            class="MuiBox-root MuiBox-root-32"
          >
            <svg
              role="presentation"
              style="width: 1.125rem; height: 1.125rem;"
              viewBox="0 0 24 24"
            >
              <path
                d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z"
                style="fill: currentColor;"
              />
            </svg>
          </div>
          <div
            class="MuiBox-root MuiBox-root-33 makeStyles-iucnInput-22"
          >
            <div
              class="MuiFormControl-root MuiFormControl-fullWidth"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
                data-shrink="true"
                id="subClassification1"
              >
                Sub-classification
              </label>
              <div
                class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
              >
                <div
                  aria-haspopup="listbox"
                  aria-label="subClassification1"
                  aria-labelledby="subClassification1 classificationDetails.[0].subClassification1"
                  class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                  id="classificationDetails.[0].subClassification1"
                  role="button"
                  tabindex="0"
                >
                  A Sub-class 1
                </div>
                <input
                  aria-hidden="true"
                  class="MuiSelect-nativeInput"
                  name="classificationDetails.[0].subClassification1"
                  tabindex="-1"
                  value="3"
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
                <fieldset
                  aria-hidden="true"
                  class="PrivateNotchedOutline-root-28 MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    class="PrivateNotchedOutline-legendLabelled-30 PrivateNotchedOutline-legendNotched-31"
                  >
                    <span>
                      Sub-classification
                    </span>
                  </legend>
                </fieldset>
              </div>
              <p
                class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled"
              />
            </div>
          </div>
          <div
            class="MuiBox-root MuiBox-root-34"
          >
            <svg
              role="presentation"
              style="width: 1.125rem; height: 1.125rem;"
              viewBox="0 0 24 24"
            >
              <path
                d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z"
                style="fill: currentColor;"
              />
            </svg>
          </div>
          <div
            class="MuiBox-root MuiBox-root-35 makeStyles-iucnInput-22"
          >
            <div
              class="MuiFormControl-root MuiFormControl-fullWidth"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled Mui-focused Mui-focused"
                data-shrink="true"
                id="subClassification2"
              >
                Sub-classification
              </label>
              <div
                class="MuiInputBase-root MuiOutlinedInput-root Mui-focused Mui-focused MuiInputBase-formControl"
              >
                <div
                  aria-haspopup="listbox"
                  aria-label="subClassification2"
                  aria-labelledby="subClassification2 classificationDetails.[0].subClassification2"
                  class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                  id="classificationDetails.[0].subClassification2"
                  role="button"
                  tabindex="0"
                >
                  A Sub-class 2
                </div>
                <input
                  aria-hidden="true"
                  class="MuiSelect-nativeInput"
                  name="classificationDetails.[0].subClassification2"
                  tabindex="-1"
                  value="5"
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
                <fieldset
                  aria-hidden="true"
                  class="PrivateNotchedOutline-root-28 MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    class="PrivateNotchedOutline-legendLabelled-30 PrivateNotchedOutline-legendNotched-31"
                  >
                    <span>
                      Sub-classification
                    </span>
                  </legend>
                </fieldset>
              </div>
              <p
                class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled Mui-focused"
              />
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root MuiBox-root-36"
        >
          <button
            aria-label="delete"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary"
            data-testid="delete-icon"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                role="presentation"
                style="width: 1.5rem; height: 1.5rem;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M9,3V4H4V6H5V19A2,2 0 0,0 7,21H17A2,2 0 0,0 19,19V6H20V4H15V3H9M7,6H17V19H7V6M9,8V17H11V8H9M13,8V17H15V8H13Z"
                  style="fill: currentColor;"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
      <div
        class="MuiBox-root MuiBox-root-24"
      >
        <button
          aria-label="Add Another"
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <span
              class="MuiButton-startIcon MuiButton-iconSizeMedium"
            >
              <svg
                role="presentation"
                style="width: 1.5rem; height: 1.5rem;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
                  style="fill: currentColor;"
                />
              </svg>
            </span>
            Add Classification
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`ProjectIUCNForm renders correctly with default empty values 1`] = `
<DocumentFragment>
  <form>
    <div
      class="MuiBox-root MuiBox-root-3"
    >
      <div
        class="MuiBox-root MuiBox-root-4"
      >
        <button
          aria-label="Add Another"
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <span
              class="MuiButton-startIcon MuiButton-iconSizeMedium"
            >
              <svg
                role="presentation"
                style="width: 1.5rem; height: 1.5rem;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
                  style="fill: currentColor;"
                />
              </svg>
            </span>
            Add Classification
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`ProjectIUCNForm renders correctly with existing details values 1`] = `
<DocumentFragment>
  <form>
    <div
      class="MuiBox-root MuiBox-root-7"
    >
      <div
        class="MuiBox-root MuiBox-root-8"
        data-testid="iucn-classification-grid"
      >
        <div
          class="MuiBox-root MuiBox-root-9 makeStyles-iucnInputContainer-5"
        >
          <div
            class="MuiBox-root MuiBox-root-10 makeStyles-iucnInput-6"
          >
            <div
              class="MuiFormControl-root MuiFormControl-fullWidth"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
                data-shrink="true"
                id="classification"
              >
                Classification
              </label>
              <div
                class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
              >
                <div
                  aria-haspopup="listbox"
                  aria-label="Classification"
                  aria-labelledby="classification classificationDetails.[0].classification"
                  class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                  id="classificationDetails.[0].classification"
                  role="button"
                  tabindex="0"
                >
                  Class 1
                </div>
                <input
                  aria-hidden="true"
                  class="MuiSelect-nativeInput"
                  name="classificationDetails.[0].classification"
                  tabindex="-1"
                  value="1"
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
                <fieldset
                  aria-hidden="true"
                  class="PrivateNotchedOutline-root-11 MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    class="PrivateNotchedOutline-legendLabelled-13 PrivateNotchedOutline-legendNotched-14"
                  >
                    <span>
                      Classification
                    </span>
                  </legend>
                </fieldset>
              </div>
              <p
                class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled"
              />
            </div>
          </div>
          <div
            class="MuiBox-root MuiBox-root-15"
          >
            <svg
              role="presentation"
              style="width: 1.125rem; height: 1.125rem;"
              viewBox="0 0 24 24"
            >
              <path
                d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z"
                style="fill: currentColor;"
              />
            </svg>
          </div>
          <div
            class="MuiBox-root MuiBox-root-16 makeStyles-iucnInput-6"
          >
            <div
              class="MuiFormControl-root MuiFormControl-fullWidth"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
                data-shrink="true"
                id="subClassification1"
              >
                Sub-classification
              </label>
              <div
                class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
              >
                <div
                  aria-haspopup="listbox"
                  aria-label="subClassification1"
                  aria-labelledby="subClassification1 classificationDetails.[0].subClassification1"
                  class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                  id="classificationDetails.[0].subClassification1"
                  role="button"
                  tabindex="0"
                >
                  A Sub-class 1
                </div>
                <input
                  aria-hidden="true"
                  class="MuiSelect-nativeInput"
                  name="classificationDetails.[0].subClassification1"
                  tabindex="-1"
                  value="3"
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
                <fieldset
                  aria-hidden="true"
                  class="PrivateNotchedOutline-root-11 MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    class="PrivateNotchedOutline-legendLabelled-13 PrivateNotchedOutline-legendNotched-14"
                  >
                    <span>
                      Sub-classification
                    </span>
                  </legend>
                </fieldset>
              </div>
              <p
                class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled"
              />
            </div>
          </div>
          <div
            class="MuiBox-root MuiBox-root-17"
          >
            <svg
              role="presentation"
              style="width: 1.125rem; height: 1.125rem;"
              viewBox="0 0 24 24"
            >
              <path
                d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z"
                style="fill: currentColor;"
              />
            </svg>
          </div>
          <div
            class="MuiBox-root MuiBox-root-18 makeStyles-iucnInput-6"
          >
            <div
              class="MuiFormControl-root MuiFormControl-fullWidth"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
                data-shrink="true"
                id="subClassification2"
              >
                Sub-classification
              </label>
              <div
                class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
              >
                <div
                  aria-haspopup="listbox"
                  aria-label="subClassification2"
                  aria-labelledby="subClassification2 classificationDetails.[0].subClassification2"
                  class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                  id="classificationDetails.[0].subClassification2"
                  role="button"
                  tabindex="0"
                >
                  A Sub-class 2
                </div>
                <input
                  aria-hidden="true"
                  class="MuiSelect-nativeInput"
                  name="classificationDetails.[0].subClassification2"
                  tabindex="-1"
                  value="5"
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
                <fieldset
                  aria-hidden="true"
                  class="PrivateNotchedOutline-root-11 MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    class="PrivateNotchedOutline-legendLabelled-13 PrivateNotchedOutline-legendNotched-14"
                  >
                    <span>
                      Sub-classification
                    </span>
                  </legend>
                </fieldset>
              </div>
              <p
                class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled"
              />
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root MuiBox-root-19"
        >
          <button
            aria-label="delete"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary"
            data-testid="delete-icon"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                role="presentation"
                style="width: 1.5rem; height: 1.5rem;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M9,3V4H4V6H5V19A2,2 0 0,0 7,21H17A2,2 0 0,0 19,19V6H20V4H15V3H9M7,6H17V19H7V6M9,8V17H11V8H9M13,8V17H15V8H13Z"
                  style="fill: currentColor;"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
      <div
        class="MuiBox-root MuiBox-root-20"
      >
        <button
          aria-label="Add Another"
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <span
              class="MuiButton-startIcon MuiButton-iconSizeMedium"
            >
              <svg
                role="presentation"
                style="width: 1.5rem; height: 1.5rem;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
                  style="fill: currentColor;"
                />
              </svg>
            </span>
            Add Classification
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
